--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </body>
 <script src="//cdn.bootcss.com/react/15.3.1/react.min.js"></script>
 <script src="//cdn.bootcss.com/react/15.3.1/react-dom.min.js"></script>
-<script src="//cdn.bootcss.com/babel-core/5.8.38/browser.min.js"></script>
-<script type="text/babel" src="js/example.js"></script>
+<!-- <script src="//cdn.bootcss.com/babel-core/5.8.38/browser.min.js"></script> -->
+<script src="js/example.js"></script>
 </html>
