--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <title>Document</title>
+<link rel="stylesheet" type="text/css" href="/css/common.css">
 </head>
 <body>
 <div id="example"></div>
@@ -10,5 +12,7 @@
 <script src="//cdn.bootcss.com/react/15.3.1/react.min.js"></script>
 <script src="//cdn.bootcss.com/react/15.3.1/react-dom.min.js"></script>
 <!-- <script src="//cdn.bootcss.com/babel-core/5.8.38/browser.min.js"></script> -->
+<!-- <script type="text/babel" src="js/example.js"></script> -->
+<script src="js/common.js"></script>
 <script src="js/example.js"></script>
 </html>
