--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<title>Document</title>
+<title>BH</title>
+<link rel="shortcut icon" href="/icon.ico">
 <link rel="stylesheet" type="text/css" href="/css/common.css">
 </head>
 <body>
+<div id="reactApp"></div>
 <div id="example"></div>
 </body>
 <script src="//cdn.bootcss.com/react/15.3.1/react.min.js"></script>
 <script src="//cdn.bootcss.com/react/15.3.1/react-dom.min.js"></script>
+<script src="//cdn.bootcss.com/react-router/3.0.0-alpha.3/ReactRouter.min.js"></script>
 <!-- <script src="//cdn.bootcss.com/babel-core/5.8.38/browser.min.js"></script> -->
 <!-- <script type="text/babel" src="js/example.js"></script> -->
-<script src="js/common.js"></script>
-<script src="js/example.js"></script>
+<script src="/js/common.js"></script>
+<script src="/js/example.js"></script>
+<!-- <script src="js/app.js"></script> -->
 </html>
