--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </body>
 <script src="//cdn.bootcss.com/react/15.3.1/react.min.js"></script>
 <script src="//cdn.bootcss.com/react/15.3.1/react-dom.min.js"></script>
-<script src="//cdn.bootcss.com/react-router/3.0.0-alpha.3/ReactRouter.min.js"></script>
+<script src="//cdn.bootcss.com/react-router/2.7.0/ReactRouter.min.js"></script>
 <!-- <script src="//cdn.bootcss.com/babel-core/5.8.38/browser.min.js"></script> -->
 <!-- <script type="text/babel" src="js/example.js"></script> -->
 <script src="/js/common.js"></script>
