--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="reactApp"></div>
-<div id="example"></div>
+<div id="example">blog</div>
 </body>
 <script src="//cdn.bootcss.com/react/15.3.1/react.min.js"></script>
 <script src="//cdn.bootcss.com/react/15.3.1/react-dom.min.js"></script>
