--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- <script src="//cdn.bootcss.com/react-router/2.7.0/ReactRouter.min.js"></script> -->
 <!-- <script src="//cdn.bootcss.com/babel-core/5.8.38/browser.min.js"></script> -->
 <!-- <script type="text/babel" src="js/example.js"></script> -->
-<script src="/js/common.js"></script>
-<script src="/js/example.js"></script>
+<!-- <script src="/js/common.js"></script> -->
+<!-- <script src="/js/example.js"></script> -->
 <!-- <script src="js/app.js"></script> -->
 </html>
