--- a/index.html
+++ b/index.html
@@ -3,20 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<title>BH</title>
-<link rel="shortcut icon" href="/icon.ico">
-<link rel="stylesheet" type="text/css" href="/css/common.css">
+<title>hexson</title>
+<link rel="shortcut icon" href="icon.ico">
+<link rel="stylesheet" type="text/css" href="dist/index.5989f3d9.css">
 </head>
 <body>
-<div id="reactApp"></div>
-<div id="example">blog</div>
+	<div id="hexson"></div>
+	<script src="dist/vendor.f1746feb.js"></script>
+	<script src="dist/index.5989f3d9.js"></script>
 </body>
-<script src="//cdn.bootcss.com/react/15.3.1/react.min.js"></script>
-<script src="//cdn.bootcss.com/react/15.3.1/react-dom.min.js"></script>
-<!-- <script src="//cdn.bootcss.com/react-router/2.7.0/ReactRouter.min.js"></script> -->
-<!-- <script src="//cdn.bootcss.com/babel-core/5.8.38/browser.min.js"></script> -->
-<!-- <script type="text/babel" src="js/example.js"></script> -->
-<!-- <script src="/js/common.js"></script> -->
-<!-- <script src="/js/example.js"></script> -->
-<!-- <script src="js/app.js"></script> -->
 </html>
