--- a/html/index.html
+++ b/html/index.html
@@ -11,5 +11,6 @@
 	<div id="hexson"></div>
 	<script src="dist/vendor.js"></script>
 	<script src="dist/index.js"></script>
+	<script src="//cdn.bootcss.com/highlight.js/9.7.0/highlight.min.js"></script>
 </body>
 </html>
