--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,7 @@
 	<div id="hexson"></div>
 	<script src="dist/vendor.js"></script>
 	<script src="dist/index.js"></script>
+	<script src="//cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 	<script src="//cdn.bootcss.com/highlight.js/9.7.0/highlight.min.js"></script>
 </body>
 </html>
