update index page

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 	<div id="hexson"></div>
 	<script src="dist/vendor.f1746feb.js"></script>
 	<script src="dist/index.3ea1ed34.js"></script>
+	<script src="//cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+	<script src="//cdn.bootcss.com/highlight.js/9.7.0/highlight.min.js"></script>
 </body>
 </html>
