--- a/html/index.html
+++ b/html/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
 	<div id="hexson"></div>
-	<script src="dist/vendor.js"></script>
-	<script src="dist/index.js"></script>
 	<script src="//cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 	<script src="//cdn.bootcss.com/highlight.js/9.7.0/highlight.min.js"></script>
+	<script src="//hadley.oschina.io/hexson/dist/data_callback.js"></script>
+	<script src="dist/vendor.js"></script>
+	<script src="dist/index.js"></script>
 </body>
 </html>
