--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <title>hexson</title>
 <link rel="shortcut icon" href="favicon.ico">
-<link rel="stylesheet" type="text/css" href="dist/index.3ea1ed34.css">
+<link rel="stylesheet" type="text/css" href="dist/index.77ceda88.css">
 </head>
 <body>
 	<div id="hexson"></div>
-	<script src="dist/vendor.f1746feb.js"></script>
-	<script src="dist/index.3ea1ed34.js"></script>
 	<script src="//cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 	<script src="//cdn.bootcss.com/highlight.js/9.7.0/highlight.min.js"></script>
+	<script src="//hadley.oschina.io/hexson/dist/data_callback.js"></script>
+	<script src="dist/vendor.f1746feb.js"></script>
+	<script src="dist/index.77ceda88.js"></script>
 </body>
 </html>
