--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div id="hexson"></div>
 	<script src="//cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 	<script src="//cdn.bootcss.com/highlight.js/9.7.0/highlight.min.js"></script>
-	<script src="//hadley.oschina.io/hexson/dist/data_callback.js"></script>
+	<script src="//hadley.oschina.io/dist/data_callback.js"></script>
 	<script src="dist/vendor.f1746feb.js"></script>
 	<script src="dist/index.77ceda88.js"></script>
 </body>
