--- a/html/index_dev.html
+++ b/html/index_dev.html
@@ -5,13 +5,13 @@
 <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <title>hexson</title>
 <link rel="shortcut icon" href="favicon.ico">
-<link rel="stylesheet" type="text/css" href="//hadley.oschina.io/dist/index.css">
+<link rel="stylesheet" type="text/css" href="dist/index.css">
 </head>
 <body>
 	<div id="hexson"></div>
 	<script src="//cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 	<script src="//cdn.bootcss.com/highlight.js/9.7.0/highlight.min.js"></script>
-	<script src="//hadley.oschina.io/dist/vendor.js"></script>
-	<script src="//hadley.oschina.io/dist/index.js"></script>
+	<script src="dist/vendor.js"></script>
+	<script src="dist/index.js"></script>
 </body>
 </html>
