--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<title>hexson</title>
+<title>Hexson's Blog</title>
 <link rel="shortcut icon" href="favicon.ico">
 <link rel="stylesheet" type="text/css" href="//hadley.oschina.io/dist/index.css">
 </head>
