--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <title>Hexson's Blog</title>
 <link rel="shortcut icon" href="favicon.ico">
-<link rel="stylesheet" type="text/css" href="dist/index.d2e803c0.css">
+<link rel="stylesheet" type="text/css" href="dist/index.cf111860.css">
 </head>
 <body>
 	<div id="hexson"></div>
 	<script src="//cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 	<script src="//cdn.bootcss.com/highlight.js/9.7.0/highlight.min.js"></script>
 	<script src="dist/vendor.f1746feb.js"></script>
-	<script src="dist/index.d2e803c0.js"></script>
+	<script src="dist/index.cf111860.js"></script>
 </body>
 </html>
